--- a/appspec.yml
+++ b/appspec.yml
@@ -4,9 +4,7 @@ os: linux
 files:
   - source: /
     destination: /var/www/Skillzcafe
-    overwrite: true
-    exclude:
-      - .env
+
 permissions:
   - object: /var/www
     pattern: "*Skillzcafe*"
@@ -22,10 +20,16 @@ permissions:
     mode: 664
     type:
       - file
+
 hooks:
+  BeforeInstall:
+    - location: scripts/clean_folder.sh
+      timeout: 300
+
   AfterInstall:
     - location: scripts/install_dependencies.sh
       timeout: 300
+
   ApplicationStart:
     - location: scripts/restart_pm2.sh
-      timeout: 60
+      timeout: 300
