Update appspec.yml to increase timeouts for BeforeInstall, AfterInstall, and ApplicationStart hooks, and enable previously commented scripts for dependency installation and PM2 restart.

--- a/appspec.yml
+++ b/appspec.yml
@@ -22,13 +22,12 @@ permissions:
 hooks:
   BeforeInstall:
     - location: scripts/clean_folder.sh
-      timeout: 60
+      timeout: 300
   AfterInstall:
-    # - location: scripts/install_dependencies.sh
-    #   timeout: 300
-    #   runas: ubuntu
-
+    - location: scripts/install_dependencies.sh
+      timeout: 300
+      runas: ubuntu
   ApplicationStart:
-    # - location: scripts/restart_pm2.sh
-    #   timeout: 300
-    #   runas: ubuntu
+    - location: scripts/restart_pm2.sh
+      timeout: 300
+      runas: ubuntu
