--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /var/www/
+    destination: /var/www/Skillzcafe
     overwrite: true
 permissions:
   - object: /var/www
